+ mongodb, + docker-compose, + 'end workout' button in tracking page, created connection between react and database, writing test exercise in mongodb doesn ot work

--- a/MyFitnessApp/src/app/backend/Dockerfile
+++ b/MyFitnessApp/src/app/backend/Dockerfile
@@ -9,6 +9,8 @@ COPY /my-backend/src/api.js .
 # Installieren Sie die Abhängigkeiten für die ReactJS-Anwendung
 
 RUN npm install
+RUN npm install mongose
+
 
 # Starten Sie den ReactJS-Server auf Port 3000
 CMD ["node", "api.js"]
