--- a/MyFitnessApp/src/app/backend/my-backend/package.json
+++ b/MyFitnessApp/src/app/backend/my-backend/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.2.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongoose": "^6.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^2.1.3",
