--- a/PumpUpPro/backend/package.json
+++ b/PumpUpPro/backend/package.json
@@ -14,7 +14,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.6.1",
-    "axios": "^1.2.6"
+    "axios": "^1.2.6",
+    "body-parser": "^1.19.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
